# open-api/api.yaml
@@ -1,4 +1,4 @@
-openapi: "3.0.3"
+openapi: "3.0.0"
 info:
   version: 1.0.0
   title: Task Creation
@@ -6,7 +6,7 @@ info:
 servers:
   - url: localhost:8081
 paths:
-  /tasks/create:
+  /task/create:
     post:
       operationId: createTask
       requestBody:
@@ -17,21 +17,81 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateTaskDto'
       responses:
-        200:
+        201:
           description: Task Created Successfully
-        500:
-          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+        400:
+          description: invalid input, object invalid
+        409:
+          description: an existing item already exists
+  /task:
+    get:
+      operationId: getTask
+      summary: Get All Task
+      parameters:
+        - name: groupBy
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: sortBy
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: pageNumber
+          required: true
+          in: query
+          schema:
+            type: string
+        - name: pageSize
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Get all Tasks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TaskDto'
 components:
   schemas:
     CreateTaskDto:
+      type: object
+      required:
+        - title
+        - scheduleDate
+        - status
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        scheduledDate:
+          type: string
+          format: date
+        location:
+          type: string
+        status:
+          type: string
+    TaskDto:
       type: object
       properties:
         title:
           type: string
         description:
           type: string
-        scheduleDate:
+        scheduledDate:
           type: string
           format: date
         location:
+          type: string
+        status:
           type: string
